--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
           <small>Cross-project tracking with milestones, blockers, and ownership.</small>
         </a>
 
-        <button class="app-badge" type="button" disabled>
-          <span class="app-kicker">Coming Soon</span>
+        <a class="app-badge app-badge-live app-badge-sync" href="/realtime-sync.html">
+          <span class="app-kicker">Live</span>
           <strong>Realtime Sync</strong>
-          <small>Live coordination dashboard for shared operational updates.</small>
-        </button>
+          <small>High-signal Loom + summary handoffs with required acknowledgement notes.</small>
+          <span id="realtimeSyncBadge" class="app-counter is-hidden" aria-live="polite" aria-label="Outstanding realtime sync items">
+            0
+          </span>
+        </a>
 
         <a
           class="app-badge app-badge-live app-badge-finance"
@@ -60,5 +63,7 @@
         </a>
       </section>
     </main>
+
+    <script src="launcher.js"></script>
   </body>
 </html>
