--- a/onboarding.html
+++ b/onboarding.html
@@ -78,7 +78,10 @@
                 </label>
                 <label>
                   Owner
-                  <input name="owner" type="text" required placeholder="Jesse" />
+                  <select name="owner" required>
+                    <option value="Jesse">Jesse</option>
+                    <option value="Giles">Giles</option>
+                  </select>
                 </label>
                 <label>
                   Setup Fee
