Add UI/UX phase 1 audit and shared token layer

--- a/realtime-sync.html
+++ b/realtime-sync.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Realtime Sync</title>
     <link rel="stylesheet" href="realtime-sync.css" />
+    <link rel="stylesheet" href="ui-tokens.css" />
   </head>
   <body>
     <div class="rt-glow rt-glow-left" aria-hidden="true"></div>
