--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Operations App Launcher</title>
     <link rel="stylesheet" href="launcher.css" />
+    <link rel="stylesheet" href="ui-tokens.css" />
   </head>
   <body>
     <div class="launcher-bg launcher-bg-left" aria-hidden="true"></div>
