--- a/onboarding.html
+++ b/onboarding.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Client Onboarding and Fulfillment</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="ui-tokens.css" />
   </head>
   <body>
     <div class="bg-glow bg-glow-left" aria-hidden="true"></div>
