--- a/project-management.html
+++ b/project-management.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Management</title>
     <link rel="stylesheet" href="project-management.css" />
+    <link rel="stylesheet" href="ui-tokens.css" />
   </head>
   <body>
     <div class="pm-glow pm-glow-left" aria-hidden="true"></div>
