--- a/sprints.html
+++ b/sprints.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sprints</title>
     <link rel="stylesheet" href="sprints.css" />
+    <link rel="stylesheet" href="ui-tokens.css" />
   </head>
   <body>
     <div class="sp-glow sp-glow-left" aria-hidden="true"></div>
