Add phase 2 shared UI components and accessibility matrix

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Operations App Launcher</title>
     <link rel="stylesheet" href="launcher.css" />
     <link rel="stylesheet" href="ui-tokens.css" />
+    <link rel="stylesheet" href="ui-components.css" />
   </head>
   <body>
     <div class="launcher-bg launcher-bg-left" aria-hidden="true"></div>
