--- a/project-management.html
+++ b/project-management.html
@@ -6,6 +6,7 @@
     <title>Project Management</title>
     <link rel="stylesheet" href="project-management.css" />
     <link rel="stylesheet" href="ui-tokens.css" />
+    <link rel="stylesheet" href="ui-components.css" />
   </head>
   <body>
     <div class="pm-glow pm-glow-left" aria-hidden="true"></div>
