--- a/realtime-sync.html
+++ b/realtime-sync.html
@@ -6,6 +6,7 @@
     <title>Realtime Sync</title>
     <link rel="stylesheet" href="realtime-sync.css" />
     <link rel="stylesheet" href="ui-tokens.css" />
+    <link rel="stylesheet" href="ui-components.css" />
   </head>
   <body>
     <div class="rt-glow rt-glow-left" aria-hidden="true"></div>
