--- a/sprints.html
+++ b/sprints.html
@@ -6,6 +6,7 @@
     <title>Sprints</title>
     <link rel="stylesheet" href="sprints.css" />
     <link rel="stylesheet" href="ui-tokens.css" />
+    <link rel="stylesheet" href="ui-components.css" />
   </head>
   <body>
     <div class="sp-glow sp-glow-left" aria-hidden="true"></div>
