--- a/onboarding.html
+++ b/onboarding.html
@@ -6,6 +6,7 @@
     <title>Client Onboarding and Fulfillment</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="ui-tokens.css" />
+    <link rel="stylesheet" href="ui-components.css" />
   </head>
   <body>
     <div class="bg-glow bg-glow-left" aria-hidden="true"></div>
