--- a/onboarding.html
+++ b/onboarding.html
@@ -22,7 +22,7 @@
       </div>
       <div class="header-actions">
         <a class="ghost link-button" href="/">App Launcher</a>
-        <button id="downloadDataBtn" class="ghost">Export JSON</button>
+        <button id="downloadDataBtn" type="button" class="ghost">Export JSON</button>
         <label class="file-upload">
           Import JSON
           <input id="importDataInput" type="file" accept="application/json,.json" />
