Add Playwright axe CI checks and resolve detected a11y issues

--- a/onboarding.html
+++ b/onboarding.html
@@ -152,7 +152,7 @@
         </div>
         <div id="onboardingBoardContent" class="collapsible-content">
           <p class="panel-note">Drag cards across columns as clients progress.</p>
-          <div id="onboardingBoard" class="kanban-board"></div>
+          <div id="onboardingBoard" class="kanban-board" tabindex="0" role="region" aria-label="Onboarding board"></div>
         </div>
       </section>
 
@@ -171,7 +171,7 @@
         </div>
         <div id="fulfillmentBoardContent" class="collapsible-content">
           <p class="panel-note">Track delivery progress until completion.</p>
-          <div id="fulfillmentBoard" class="kanban-board"></div>
+          <div id="fulfillmentBoard" class="kanban-board" tabindex="0" role="region" aria-label="Fulfillment board"></div>
         </div>
       </section>
 
