--- a/project-management.html
+++ b/project-management.html
@@ -123,7 +123,7 @@
         </div>
         <div id="pmBoardContent" class="pm-collapsible-content">
           <p class="pm-panel-note">Drag cards between stages to update project flow.</p>
-          <div id="projectBoard" class="pm-board"></div>
+          <div id="projectBoard" class="pm-board" tabindex="0" role="region" aria-label="Project board"></div>
         </div>
       </section>
 
