Add global and per-app dark mode controls

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       </section>
     </main>
 
+    <script src="theme.js"></script>
     <script src="launcher.js"></script>
   </body>
 </html>
