--- a/project-management.html
+++ b/project-management.html
@@ -230,6 +230,7 @@
       </section>
     </main>
 
+    <script src="theme.js"></script>
     <script src="project-management.js"></script>
   </body>
 </html>
