--- a/realtime-sync.html
+++ b/realtime-sync.html
@@ -119,6 +119,7 @@
       </section>
     </main>
 
+    <script src="theme.js"></script>
     <script src="realtime-sync.js"></script>
   </body>
 </html>
