--- a/sprints.html
+++ b/sprints.html
@@ -168,6 +168,7 @@
       </section>
     </main>
 
+    <script src="theme.js"></script>
     <script src="sprints.js"></script>
   </body>
 </html>
